syntax = "proto3";

package pb.story;

option go_package = "pb/story";

import "pb/story/story.proto";

message FindAllStoriesRequest {
    int64 page = 1;
    int64 limit = 2;
    string search = 3;
}

message FindStoryByIDRequest {
    int64 id = 1;
}

service StoryService {
    rpc FindAll(FindAllStoriesRequest) returns (Stories);
    rpc FindByID(FindStoryByIDRequest) returns (Story);
}